fix(inline-css): remove double scrollbar in popout window

--- a/plugins/inline-css/components/Editor.scss
+++ b/plugins/inline-css/components/Editor.scss
@@ -5,10 +5,27 @@
   background: var(--background-base-lowest);
 
   height: 80vh !important;
+
+  &[data-popout="true"] {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: auto !important;
+    min-height: 0;
+    margin-top: 12px;
+  }
 }
 
 .ceditor > div {
   height: 100% !important;
+}
+
+.ceditor[data-popout="true"] > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+  height: auto !important;
 }
 
 .controls {
@@ -66,7 +83,21 @@
   }
 }
 
+.ceditor[data-popout="true"] textarea {
+  flex: 1;
+  min-height: 0;
+  overflow-y: auto;
+}
+
 .ceditor div[class*="styles-"] {
   height: 100% !important;
   width: 100% !important;
+}
+
+.ceditor[data-popout="true"] div[class*="styles-"] {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+  height: auto !important;
 }
